--- a/blog.html
+++ b/blog.html
@@ -1,85 +1,97 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|IM+Fell+English:400,400italic' rel='stylesheet' type='text/css'>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Home | Fran's CSS Adventures</title>
-<link href="css/global.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-
-<!--Header and Navigation-->
+<!DOCTYPE html>
+<html xmlns='http://www.w3.org/1999.xhtml'>
+  <head>
+    <link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic,700|IM+Fell+English:400,400italic' rel='stylesheet' type='text/css'>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+    <title>
+      Home | Fran&apos;s CSS Adventures
+    </title>
+    <link href='css/global.css' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <!-- Header and Navigation -->
     <header>
-        <div class="container container-header">
-            <div class="header-left">
-                <h1> <a href="index.html">Fran's CSS Adventures</a></h1>
-            </div>
-            <nav>
-                <ul class="nav-list">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li>
-                        <a href="experiments.html">Experiments</a>
-                    </li>
-                    <li>
-                        <a class="active" href="blog.html">Blog</a>
-                    </li>
-                </ul>
-            </nav>
+      <div class='container'>
+        <div class='header-left'>
+          <h1>
+            <a href='index.html'>Fran&apos;s CSS Adventures</a>
+          </h1>
         </div>
+        <nav>
+          <ul class='nav-list'>
+            <li>
+              <a href='index.html'>Home</a>
+            </li>
+            <li>
+              <a href='about.html'>About</a>
+            </li>
+            <li>
+              <a href='experiments.html'>Experiments</a>
+            </li>
+            <li>
+              <a class='active' href='blog.html'>Blog</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-<!--End Header and Navigation-->
-
-<!--Main Content-->
-    <div class="maincontent">
-        <div class="container">
-        	<div class="contentleft">
-                <div class="content-inner">
-            		<h2>Fran&apos;s Starter League Blog</h2>
-                </div>
-                <div class="content-inner">
-                    <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
-                </div>
-                <div class="content-inner">
-                    <h3>My First Mentoring Session</h3>
-                </div>
-            </div>
-            <div class="contentright">
-                <aside>
-                    <p>Insert flattering <a href="about.html">photo</a> here.</p>
-                    <p class="text-center">Fran Levy</p>
-                </aside>
-                <aside>
-                    <h4>Weeks 1-3: What I&apos;ve learned so far</h4>
-                </aside>
-                <aside>
-                    <h4>My First Mentoring Session</h4>
-                </aside>
-                <aside>
-                    Future entries coming soon
-                </aside>
-            </div>
+    <!-- Main Content -->
+    <div class='maincontent'>
+      <div class='container'>
+        <div class='contentleft'>
+          <div class='content-inner'>
+            <h2>Fran&apos;s Starter League Blog</h2>
+          </div>
+          <section class='content-inner'>
+            <h3>Weeks 1-3: What I&apos;ve learned so far</h3>
+          </section>
+          <section class='content-inner'>
+            <h3>My First Mentoring Session</h3>
+          </section>
         </div>
+        <div class='contentright'>
+          <aside>
+            <p>
+              Insert flattering photo here.
+            </p>
+            <p class='text-center'>
+              Fran Levy
+            </p>
+          </aside>
+          <aside>
+            <h4>
+              Weeks 1-3: What I&apos;ve learned so far
+            </h4>
+          </aside>
+          <aside>
+            <h4>
+              My First Mentoring Session
+            </h4>
+          </aside>
+          <aside>
+            <p>
+              Future entries coming soon
+            </p>
+          </aside>
+        </div>
+      </div>
     </div>
-<!--End Main Content-->
-
-<!--Footer-->
+    <!-- Footer -->
     <footer>
-       <div class="container">
-            <div class="footer-left">
-                <p>&copy; 2013 Fran Levy. All rights reserved.</p>
-            </div>
-            <div class="socialmedia">
-              <p>Insert social media here</p>
-            </div>
-       </div>
+      <div class='container'>
+        <div class='footer-left'>
+          <p>
+            &copy; 2013 Fran Levy. All rights reserved.
+          </p>
+        </div>
+        <div class='socialmedia'>
+          <p>
+            Insert social media here
+          </p>
+        </div>
+      </div>
     </footer>
-<!--End Footer-->
-
-</body>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
+    <script src='js/script.js'></script>
+  </body>
 </html>
