--- a/about.html
+++ b/about.html
@@ -74,20 +74,18 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer>
-      <div class='container'>
-        <div class='footer-left'>
-          <p>
-            &copy; 2013 Fran Levy. All rights reserved.
-          </p>
-        </div>
-        <div class='socialmedia'>
-          <p>
-            Insert social media here
-          </p>
-        </div>
+    <div class='container footer'>
+      <div class='footer-left'>
+        <p>
+          &copy; 2013 Fran Levy. All rights reserved.
+        </p>
       </div>
-    </footer>
+      <div class='socialmedia'>
+        <p>
+          Insert social media here
+        </p>
+      </div>
+    </div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js'></script>
     <script src='js/script.js'></script>
   </body>
